--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -68,6 +68,7 @@ section {
 #page2 {
   background-color: var(--blue);
   display: flex;
+  justify-content: space-around;
 }
 
 #page3,
@@ -156,46 +157,21 @@ nav {
   font-size: 1em;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-::-webkit-scrollbar-track {
-  background-color: var(--beige);
-  border-left: 1px solid var(--black);
-}
-
-::-webkit-scrollbar-thumb {
-  background-color: var(--yellow);
-  border-bottom: 1px solid var(--black);
-  border-left: 1px solid var(--black);
-  border-top: 1px solid var(--black);
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: var(--green);
-}
-
 /* #page2 projects */
-.container {
+.projects_container {
+  width: 690px;
   position: relative;
-  width: 100%;
-  height: 100%;
-}
-
-.container .modal {
-  position: absolute;
+  top:-80px;
 }
 
 .projects_container .modal:first-child {
-  top: 80px;
-  left: 50px;
   height: 500px;
 }
 
 .projects_container .modal:nth-child(2) {
-  top: 120px;
-  left: 100px;
+  position: absolute;
+  top: 50px;
+  left: 50px;
   height: 500px;
 }
 
@@ -207,9 +183,11 @@ nav {
 }
 
 .projects_container .modal:last-child {
-  top: 170px;
-  left: 160px;
+  position: absolute;
+  top: 100px;
+  left: 120px;
   height: 550px;
+  z-index: 5;
 }
 
 #page2 .tab_yellow + div {
@@ -224,6 +202,8 @@ nav {
   flex-direction: column;
   gap: 2rem;
   height: 500px;
+  width: 520px;
+  overflow-x: hidden;
   overflow-y: auto;
 }
 
@@ -272,13 +252,28 @@ nav {
   overflow: hidden;
 }
 
-/* #page2 tech */
-.tech {
-  top: 110px;
-  right: 50px;
+.projects::-webkit-scrollbar {
+  height: 10px;
 }
 
-.tech_container {
+.projects::-webkit-scrollbar-track {
+  background-color: var(--beige);
+  border-left: 1px solid var(--black);
+}
+
+.projects::-webkit-scrollbar-thumb {
+  background-color: var(--yellow);
+  border-bottom: 1px solid var(--black);
+  border-left: 1px solid var(--black);
+  border-top: 1px solid var(--black);
+}
+
+.projects::-webkit-scrollbar-thumb:hover {
+  background-color: var(--green);
+}
+
+/* #page2 tech */
+.tech_inner {
   display: flex;
   font-size: 2rem;
 }
