--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -31,6 +31,11 @@ a {
   color: var(--black);
 }
 
+input {
+  border: none;
+  background: transparent;
+}
+
 ul {
   list-style: none;
 }
@@ -157,6 +162,62 @@ nav {
   font-size: 1em;
 }
 
+/* #page2 search bar */
+.search_container {
+  display: flex;
+  padding: 1rem;
+  border-bottom: 2px solid var(--black);
+  height: 3rem;
+  gap: 1rem;
+  align-items: center;
+}
+
+.search_container img {
+  height: 2rem;
+  width: 2rem;
+}
+
+.search_container div {
+  height: 2.8rem;
+  flex: 1;
+  border: 2px solid var(--black);
+  border-radius: 0.8rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  overflow: hidden;
+}
+
+.search_container button {
+  padding-right: 1rem;
+  height: 100%;
+  border: none;
+  background: transparent;
+  line-height: 1rem;
+}
+.search_container input {
+  flex: 1;
+  height: 100%;
+  padding: 0.3rem;
+}
+
+.search_container input:hover{
+  background-color: #d9d9d9;
+}
+
+.search_container input:hover + button{
+  background-color: #d9d9d9;
+}
+
+.search_container input:focus{
+  background-color: white;
+  outline: none;
+}
+
+.search_container input:focus + button{
+  background-color: white;
+}
+
 /* #page2 projects */
 .projects_container {
   width: 690px;
@@ -190,21 +251,15 @@ nav {
   z-index: 5;
 }
 
-#page2 .tab_yellow + div {
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
 .projects {
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  height: 500px;
+  height: 44rem;
   width: 520px;
   overflow-x: hidden;
   overflow-y: auto;
+  padding: 2rem;
 }
 
 .project {
