--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -391,13 +391,13 @@ nav {
   border-bottom: 2px solid var(--black);
 }
 
-.techlist {
+#techlist {
   height: 45rem;
   overflow-y: auto;
   padding: 2rem 2rem 0 2rem;
 }
 
-.techlist li {
+#techlist li {
   white-space: nowrap;
   text-overflow: ellipsis;
   overflow: hidden;
